# RL-ASR

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  exp1_grpo.yaml  exp2_pare.yaml  exp3_oppa.yaml
experiments/: README_exp1_grpo.md  README_exp2_pare.md  README_exp3_oppa.md  exp1_grpo.py  exp2_pare.py  exp3_oppa.py  exp_combined.py  run_baseline.py
scripts/: run_all.sh  setup_data.sh
src/: __init__.py  prompt.py  utils.py  whisper_wrapper.py
src/adaptation/: __init__.py  base.py  persistent.py  single_sample.py
src/data/: __init__.py  l2arctic.py  librispeech_noisy.py
src/rewards/: __init__.py  clap_reward.py  consistency_reward.py  ensemble.py  lm_reward.py
src/rl/: __init__.py  grpo.py  reinforce.py
